<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/background_of_my_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MyProfileActivity">

    <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:srcCompat="@drawable/xenolion"
            android:contentDescription="@string/my_profile_image"
            android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"/>

    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:fontFamily="@font/dephiana"
            android:id="@+id/profile_name"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/view_underline"
            android:background="@color/underline"
            app:layout_constraintTop_toBottomOf="@+id/profile_name"
            android:layout_marginTop="8dp"/>

    <TextView
            android:text="@string/track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dephiana"
            android:id="@+id/track"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/view_underline"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>

    <TextView
            android:text="@string/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/country"
            android:textSize="20sp"
            android:fontFamily="@font/dephiana"
            app:layout_constraintTop_toBottomOf="@+id/track"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>

    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:textSize="20sp"
            android:fontFamily="@font/dephiana"
            app:layout_constraintTop_toBottomOf="@+id/country"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:autoLink="email"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>

    <TextView
            android:text="@string/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phone"
            android:textSize="20sp"
            android:fontFamily="@font/dephiana"
            android:autoLink="phone"
            app:layout_constraintTop_toBottomOf="@+id/email"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/slack_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/slack"
            android:textSize="20sp"
            android:fontFamily="@font/dephiana"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>