<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_intro"
            android:gravity="center"
            android:textSize="36sp"
            android:textStyle="bold"
            android:fontFamily="@font/dephiana"
            android:textColor="@android:color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textView"
            android:layout_marginTop="24dp"/>

    <Button
            android:text="@string/about_alc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAboutAlc"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/bgrnd_shape"
            android:fontFamily="@font/dephiana"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"/>

    <Button
            android:text="@string/my_profile"
            android:layout_width="wrap_content"
            android:fontFamily="@font/dephiana"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/bgrnd_shape"
            android:layout_height="wrap_content"
            android:id="@+id/btnMyProfile"
            app:layout_constraintTop_toBottomOf="@+id/btnAboutAlc"
            app:layout_constraintEnd_toEndOf="@+id/btnAboutAlc"
            app:layout_constraintStart_toStartOf="@+id/btnAboutAlc"
            android:layout_marginTop="48dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>